--- a/pStyle.css
+++ b/pStyle.css
@@ -3,3 +3,14 @@
     height: 500px;
     border: 1px solid black;
 }
+
+.axis path,
+.axis line {
+    stroke: black;
+    shape-rendering: crispEdges;
+}
+
+.axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+}
