--- a/pStyle.css
+++ b/pStyle.css
@@ -14,3 +14,16 @@
     font-family: sans-serif;
     font-size: 11px;
 }
+
+.consLines{
+    stroke-width: 3px;
+    fill: none;
+}
+
+.mainHeader{
+    font-size: 1.5em;
+}
+
+.subHeading{
+    font-size: 0.6em;
+}
