completed slider interactivity for range emphasis

--- a/pStyle.css
+++ b/pStyle.css
@@ -1,62 +1,50 @@
-#chartContainer{
-    width: 700px;
-    height: 490px;
-    border: 1px solid black;
-    padding-top: 10px;
+#chartContainer {
+  width: 700px;
+  height: 490px;
+  padding-top: 10px;
 }
 
 .axis path,
 .axis line {
-    stroke: black;
-    shape-rendering: crispEdges;
+  stroke: black;
+  shape-rendering: crispEdges;
 }
 
-.axis, .yAxis{
-    font-family: sans-serif;
-    font-size: 11px;
+.axis,
+.yAxis {
+  font-family: sans-serif;
+  font-size: 11px;
 }
 
-.consLines{
-    stroke-width: 3px;
-    fill: none;
+.consLines {
+  stroke-width: 3px;
+  fill: none;
 }
 
-.mainHeader{
-    font-size: 1.45em;
+.mainHeader {
+  font-size: 1.45em;
 }
 
-.subHeading{
-    font-size: 0.6em;
+.subHeading {
+  font-size: 0.6em;
 }
 
-.toolTip{
-    position: fixed;
-    opacity: 0;
-    pointer-events: none;
-    padding: 3px;
-    border: 1px solid #ccc;
-    box-shadow: 3px 3px 3px #ccc;
-    border-radius: 5px;
-    background-color: rgba(255, 230, 197, 0.849);
+.toolTip {
+  position: fixed;
+  opacity: 0;
+  pointer-events: none;
+  padding: 3px;
+  border: 1px solid #ccc;
+  box-shadow: 3px 3px 3px #ccc;
+  border-radius: 5px;
+  background-color: rgba(255, 230, 197, 0.849);
 }
 
-/* .coalConsRect{
-    stroke: aqua;
-    stroke-width: 2px;
+.legendText,
+.legendRects {
+  cursor: pointer;
 }
 
-.coalConsText{
-    text-decoration: underline;
-} */
-
-.legendText, .legendRects{
-    cursor: pointer;
-}
-
-/* .coalConsLine{
-    display: none;
-} */
-
-.greenNode{
-    display: none;
+.rangeDiv {
+  margin-left: 80px;
 }
